<resources>
    <string name="app_name">GestFly</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_projet_list">Liste des projets</string>
    <string name="search">Recherche</string>
    <string name="welcome">Bienvenue à GestFly</string>
    <string name="connexion">S\'AUTHENTIFIER</string>
    <string name="username_label">Username :</string>
    <string name="username">Username</string>
    <string name="password_label">Password :</string>
    <string name="password">Password</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
    <string name="mes_projets">Mes Projets</string>
    <string name="consulter_mes_projets">Consulter mes projets</string>
    <string name="mes_taches">Mes Tâches</string>
    <string name="consulter_mes_taches">Consulter mes tâches</string>
    <string name="mon_conge">Mon Congé</string>
    <string name="demander_un_conge">Demander un congé</string>
    <string name="mon_salaire">Mon Salaire</string>
    <string name="demander_un_avance">Demander un avance</string>
    <string name="mes_rapports">Mes Rapports</string>
    <string name="realiser_un_rapport">Réaliser un rapport</string>
    <string name="editer_les_parametres">Editer les paramètres</string>
    <string name="nom_du_projet">Nom du projet</string>
    <string name="title_activity_tache_list">Liste des tâches</string>
    <string name="nom_de_la_tache">Nom de la tâche</string>
    <string name="title_activity_conge_list">Liste des demandes de congé</string>
    <string name="en_cours">En cours</string>
    <string name="min_date">05-06-2018</string>
    <string name="a">à</string>
    <string name="max_date">07-06-2018</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier_la_demande_du_cong">Modifier la demande du congé</string>
    <string name="la_date_de_debut_label">La date de début :</string>
    <string name="la_date_de_reprise_label">La date de reprise :</string>
    <string name="la_date_de_reprise_hint">La date de reprise</string>
    <string name="la_date_de_debut_hint">La date de début</string>
    <string name="nouvelle_demande_de_conge">Nouvelle demande de congé</string>
    <string name="valider">Valider</string>
    <string name="title_activity_salaire_list">Liste des demandes de salaire</string>
    <string name="avance_du_mois">Avance du mois</string>
    <string name="dhs">DHs</string>
    <string name="augmentation_de">Augmentation de</string>
    <string name="choisissez_un_type">Choisissez un type</string>
    <string name="demande_d_augmentation_de_salaire">Demande d\'augmentation de salaire</string>
    <string name="demande_d_avance_sur_salaire">Demande d\'avance sur salaire</string>
    <string name="username_required">Le champ \'Username\' est obligatoire !</string>
    <string name="password_required">Le champ \'Password\' est obligatoire !</string>
    <string name="passwor_or_username_incorrect">Mot de passe ou nom d\'utilisateur incorrect !</string>
    <string name="message">Message</string>
    <string name="montant_ajouter_hint">Montant à ajouter (DH)</string>
    <string name="montant_ajouter_label">Montant à ajouter :</string>
    <string name="envoyer">Envoyer</string>
    <string name="votre_salaire_actuel_hint">Votre salaire actuel (DH)</string>
    <string name="votre_salaire_actuel_label">Votre salaire actuel :</string>
    <string name="message_label">Message :</string>
    <string name="mois_avancer_label">Mois à avancer :</string>
    <string name="mois_avancer_hint">Mois à avancer</string>
    <string name="profile">Profile</string>
    <string name="changer_le_mot_de_passe">Changer le mot de passe</string>
    <string name="se_deconnecter">Se déconnecter</string>

    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="title_activity_rapport_list">Mes rapports</string>
    <string name="titre_du_rapport">Titre du rapport</string>
    <string name="nom_du_proujet_ou_t_che">Nom du proujet ou tâche</string>
    <string name="solomon_grundy_poem">Solomon Grundy, Born on a Monday, Christened on Tuesday, Married on Wednesday, Took ill on Thursday, Grew worse on Friday, Died on Saturday, Buried on Sunday, That was the end, Of Solomon Grundy.Solomon Grundy, Born on a Monday, Christened on Tuesday, Married on Wednesday, Took ill on Thursday, Grew worse on Friday, Died on Saturday, Buried on Sunday, That was the end, Of Solomon Grundy.</string>
    <string name="_15_03_2018">15-03-2018</string>
    <string name="le_titre_de_ce_rapport">Le titre de ce rapport</string>
    <string name="chaachai_youssef">CHAACHAI Youssef</string>
    <string name="titre_du_projet_ou_de_la_tache">Titre du projet ou de la tache</string>
    <string name="r_aliser_un_rapport_pour_une_t_che">Réaliser un rapport pour une tâche</string>
    <string name="r_aliser_un_rapport_pour_un_projet">Réaliser un rapport pour un projet</string>
    <string name="mois_1_12">Mois (1-12)</string>
    <string name="dash">/</string>
    <string name="_2019">2019</string>
    <string name="commencer_la_journee">Commencer la journée</string>
    <string name="finir_la_journee">Finir la journée</string>
    <string name="plus_tard">Plus tard</string>
    <string name="declarer">Déclarer</string>
    <string name="declare_your_day_text">Veuillez déclarer le début de votre journée.</string>


</resources>
