<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background">

    <TextView
        android:id="@+id/text_rapport_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_panel_background"
        android:text="@string/solomon_grundy_poem"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre_rapport_content" />

    <TextView
        android:id="@+id/date_rapport_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_15_03_2018"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titre_rapport_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/text_panel_background"
        android:text="@string/le_titre_de_ce_rapport"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/user_rapport_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chaachai_youssef"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/date_rapport_content"
        app:layout_constraintTop_toBottomOf="@+id/date_rapport_content" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre_du_projet_ou_de_la_tache"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/user_rapport_content"
        app:layout_constraintTop_toBottomOf="@+id/user_rapport_content" />
</android.support.constraint.ConstraintLayout>