<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conge_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BBE5E5E5"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/conge_item_etat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/en_cours"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/conge_date_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/min_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conge_item_etat"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/a"
        app:layout_constraintBottom_toBottomOf="@+id/conge_date_min"
        app:layout_constraintStart_toEndOf="@+id/conge_date_min"
        app:layout_constraintTop_toTopOf="@+id/conge_date_min"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/conge_date_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/max_date"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/see_more_conge"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_black_24dp"
        android:contentDescription="@string/todo"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="Du"
        app:layout_constraintBottom_toBottomOf="@+id/conge_date_min"
        app:layout_constraintEnd_toStartOf="@+id/conge_date_min"
        app:layout_constraintTop_toTopOf="@+id/conge_date_min"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>